# Altcoin-Momentum-Agent1.0

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
docs/: AMA_RT_10U_LIVE_LIMITED_LAUNCH_PACK.md  AMA_RT_ADAPTIVE_MARKET_OPERATING_SYSTEM.md  AMA_RT_AI_LAYER_ENGINEERING_SPEC.md  AMA_RT_API_INTEGRATION_PACK.md  AMA_RT_DEEPSEEK_LIVE_INTELLIGENCE.md  AMA_RT_FINAL_FULL_SYSTEM_AUDIT.md  AMA_RT_LIVE_API_SETUP.md  AMA_RT_LIVE_CAPITAL_RISK_PNL.md  AMA_RT_LIVE_EXECUTION_GATEWAY.md  AMA_RT_LIVE_FOUNDATION_SPEC.md  AMA_RT_LIVE_MODE_AND_CAPITAL_PROFILE.md  AMA_RT_LIVE_OPERATOR_RUNBOOK.md  AMA_RT_TELEGRAM_OPERATOR_CONSOLE.md  AMA_RT_V1_4_Production_Spec_Kiro.md  BUGFIX_BRIEF.md  CHANGELOG.md  DEEPSEEK_SANDBOX_RUNBOOK.md  IMPLEMENTATION_PLAN.md  PHASE_11B_PAPER_ACCEPTANCE_REPORT.md  PHASE_11C_1B_DRY_RUN_EVIDENCE.md  PHASE_11C_1C_ADAPTIVE_CANDIDATE_REGIME_STRATEGY_SELECTOR.md  PHASE_11C_1C_B_RUNTIME_CALIBRATION.md  PHASE_11C_1C_C_B_B_B_B_REGIME_CLUSTER_EVIDENCE_PACK.md  PHASE_11C_1C_C_B_B_B_C_LONG_WINDOW_COHORT_STABILITY.md  PHASE_11C_1C_C_B_B_B_D_A_HISTORICAL_60D_MOVER_COVERAGE_BACKFILL.md  PHASE_11C_1C_C_B_B_B_D_B_1_HISTORICAL_PRICE_PATH_KLINE_PATH_ADAPTER.md  PHASE_11C_1C_C_B_B_B_D_B_POST_DISCOVERY_OUTCOME_METRICS.md  PHASE_11C_1C_C_B_B_B_D_C_A_REJECT_TO_OUTCOME_ATTRIBUTION.md  PHASE_11C_1C_C_B_B_B_D_C_B_SEVERE_MISSED_TAIL_TRIAGE.md  PHASE_11C_1C_C_B_B_B_D_D_DISCOVERY_QUALITY_SCORECARD.md  PHASE_11C_1C_C_B_B_B_D_E_BLOCK_B_INTEGRATED_EVIDENCE_CHECKPOINT.md  PHASE_11C_1C_C_B_B_B_D_MOVER_CAPTURE_RECALL_AUDIT.md  (+57 more)
scripts/: init_db.py  (+24 more)
(+436 files in other folders)
